# GenConCal

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
backend/: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  submit_events.http  unique-games.json
backend/.sqlx/: query-117d98fd492861205b082ed9b28b0d5c96626515873d0543b9012cca944b6fe4.json  query-13a3c559b127d80d9e5c17a9afd556576ec6bfe24f52858c8996e897cb578d38.json  query-1cdd171faac2aa4f2e56512af9c2b68cb3fa073baae6926c10d40949ae505154.json  query-1d03de876131133cc64dd89aa91cfbe066ddeac5d54f292a7dc26bee1ea0a335.json  query-3d5b651313d02297d1d49dd09bb8adc0ff12e82f5270aabac1cba5327db23561.json  query-429460eae5c96cbb556831517e265c1fd67f2f129f04b53b069b48478de8161c.json  query-54b914500ddb3dbe7edaf08001118cf737f79e8d9242ff15207d9b8d9eefb03a.json  query-57869bbcf3982160dd16c1a72a98a611c728a63a9dc950f01d47377dc4811177.json  query-6b090476da3308dc7b194918f97d7f41b7b71f5eb01993174fe76e2471dd7b69.json  query-70b6b6e77b98444bc65fb6f229065e681a187fd231abead654247d947c046a06.json  query-8788f91563b36bcec8a0a543e1934753ab2245118b60d3ad488cd15b739d6468.json  query-8bd3eb749a4788250f823cad5aa3378724ab209800274cae90bfc20c32a75fec.json  query-b49ff5b55019f9a04fc809e8e331f26206e0dccfa7d96e0f040656169638f21f.json  query-c338f5fbf610312945249b21e26124bb2bcd02920be3ef50bbe38bbb55768b7e.json  query-d7601ece9660d350de86bb1fdb49706129bc3329cc97a28611ff3b3cacc60b94.json  query-db9a7530c6ac8ba2d162b2430b1f89b8d80bde79b16dff9a49824d5e78180857.json  query-de36158ede044a5e985ac182185c3d1885002a3e7ab3c79d7dbbd26850c9e3b5.json  (+3 more)
backend/doc/: testing.md
(+248 files in other folders)
