[package]
name = "genconcal_backend"
version = "0.1.0"
authors = ["Evan Rittenhouse"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
serde = "1.0"
serde_json = "1.0"
derive_more = { version = "1.0", features = ["display", "error"] }
validator = { version = "0.18", features = ["derive"] }
axum = "0.7"
axum-macros = "0.4"
tokio = { version = "1.19", features = ["full"] }
anyhow = "1.0"
utoipa = { version = "4.2", features = ["chrono"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
fake = { version = "2.9", features = ["chrono", "chrono-tz", "derive"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = {  version = "0.28.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "serialize", "gzip-tonic"]}
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"]}
opentelemetry = "0.27"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
paste = "1.0.15"

[dev-dependencies]
futures-core = "0.3"
hyper = "1.2"
lazy_static = "1.4"
mockall = "0.13"
rand = "0.8"
speculoos = "0.11"
tokio = { version = "1.19", features = ["sync"] }
tower = "0.4"

[features]
integration_test = []
